nearly more more more more done

--- a/Sicherheitskopie/Literatur.bib
+++ b/Sicherheitskopie/Literatur.bib
@@ -1,4 +1,4 @@
-﻿% This file was created with Citavi 6.2.0.12
+% This file was created with Citavi 6.2.0.12
 
 @proceedings{.04.07.201707.07.2017,
  year = {04.07.2017 - 07.07.2017},
@@ -18,8 +18,10 @@
 
 @misc{amazon,
  abstract = {Online shopping from a great selection at Prime Air Store.},
+ author = {{Amazon.com Inc.}},
+ year = {2019},
  title = {Amazon.com: Prime Air},
- url = {https://www.amazon.com/b?node=8037720011},
+ note = {URL: \url{https://www.amazon.com/b?node=8037720011}[abgerufen am 19.02.2019].},
  keywords = {Amazon.com;Prime Air},
  urldate = {19.02.2019}
 }
@@ -29,37 +31,43 @@
  author = {Anderson, C. (DIY Drones) and Blouin, C.},
  year = {2018},
  title = {10 km high flight with a 1kg quadcopter},
- url = {https://diydrones.com/profiles/blogs/10-km-high-flight-with-a-1kg-quadcopter},
+ note = {URL: \url{https://diydrones.com/profiles/blogs/10-km-high-flight-with-a-1kg-quadcopter}[abgerufen am 04.01.2019].},
  urldate = {04.01.2019}
 }
 
 
 @misc{apc,
+ author = {{Landing Products Inc.}},
+ year = {2019},
  title = {Performance Data | APC Propellers},
- url = {https://www.apcprop.com/technical-information/performance-data/},
+ note = {URL: \url{https://www.apcprop.com/technical-information/performance-data/}[abgerufen am 19.02.2019].},
  urldate = {19.02.2019}
 }
 
 
 @misc{apc.theory,
+ author = {{Landing Products Inc.}},
+ year = {2019},
  title = {Engineering | APC Propellers},
- url = {https://www.apcprop.com/technical-information/engineering/#aero},
+ note = {URL: \url{https://www.apcprop.com/technical-information/engineering/}[abgerufen am 26.02.2019].},
  urldate = {26.02.2019}
 }
 
 
 @misc{arducopter.clav,
- year = {26.02.2019},
+ author = {ArduPilot},
+ year = {2019},
  title = {Current Limiting and Voltage Scaling --- Copter documentation},
- url = {http://ardupilot.org/copter/docs/current-limiting-and-voltage-scaling.html},
+ note = {URL: \url{http://ardupilot.org/copter/docs/current-limiting-and-voltage-scaling.html}[abgerufen am 26.02.2019].},
  urldate = {26.02.2019}
 }
 
 
 @misc{arducopter.mts,
- year = {26.02.2019},
+ author = {ArduPilot},
+ year = {2019},
  title = {Motor Thrust Scaling --- Copter documentation},
- url = {http://ardupilot.org/copter/docs/motor-thrust-scaling.html},
+ note = {URL: \url{http://ardupilot.org/copter/docs/motor-thrust-scaling.html}[abgerufen am 26.02.2019].},
  urldate = {26.02.2019}
 }
 
@@ -78,8 +86,9 @@
 
 
 @misc{axi,
- author = {o, JIROUT REKLAMY s. r.},
- title = {AXI MODEL MOTORS | AXI MODEL MOTORS s. r. o.},
+ author = {{MODEL MOTORS s. r. o.}},
+ year = {2019},
+ title = {AXI MODEL MOTORS},
  url = {https://www.modelmotors.cz/},
  urldate = {24.02.2019}
 }
@@ -87,8 +96,9 @@
 
 @misc{batteriezelle,
  author = {{Luxtrim GmbH}},
+ year = {2019},
  title = {Murata / Sony Konion US18650VTC6 - 3120mAh, 3,6V - 3,7V (Flat Top) Lithium-Ionen Akkus 18650},
- url = {https://www.akkuteile.de/lithium-ionen-akkus/18650/sony-konion-us18650vtc6-3120mah-3-6v-3-7v-flat-top-max-30a/a-100680/},
+ note = {URL: \url{https://www.akkuteile.de/lithium-ionen-akkus/18650/sony-konion-us18650vtc6-3120mah-3-6v-3-7v-flat-top-max-30a/a-100680/}[abgerufen am 19.02.2019].},
  keywords = {3;6V 3;7V ungesch{\"u}tzt vtc6 us 18650 3120mah VTC6;Sony Konion US18650VTC6 - 3000mAh},
  urldate = {19.02.2019}
 }
@@ -96,8 +106,10 @@
 
 @misc{betaflight,
  abstract = {~Introduction Update: This is relevant for all versions of betaflight 3.4.0 and up. One of the new {\textquotedbl}minor features{\textquotedbl} in betaflight that I'm very excited about is throttle limit. Previously throttle...},
+ author = {Quadifyrc},
+ year = {2019},
  title = {THROTTLE LIMIT IN BETAFLIGHT 3.4 and Up: Longer battery life and cooler motors},
- url = {https://www.quadifyrc.com/tips-and-tricks/throttle-limit-in-betaflight-340-longer-battery-life-and-cooler-motors},
+ note = {URL: \url{https://www.quadifyrc.com/tips-and-tricks/throttle-limit-in-betaflight-340-longer-battery-life-and-cooler-motors}[abgerufen am 25.02.2019].},
  keywords = {bang for buck;betaflight;cheap mods;hawk5;mobula7;modifications;mods;tips;tricks},
  urldate = {25.02.2019}
 }
@@ -154,32 +166,36 @@
 
 @misc{cobramot,
  abstract = {CobraMotorsUSA.com - Cobra Brushless Motors, ESC's and Motor Parts},
- year = {01.12.2017},
+ author = {{Innov8tive Designs}, Inc.},
+ year = {2017},
  title = {CobraMotorsUSA.com - Cobra CM-2206/30},
- url = {http://www.cobramotorsusa.com/multirotor-2206-30.html},
+ note = {URL: \url{http://www.cobramotorsusa.com/multirotor-2206-30.html}[abgerufen am 26.02.2019].},
  keywords = {Cobra Brushless Motors},
  urldate = {26.02.2019}
 }
 
 
 @misc{cvt,
+ author = {Rigidrc},
+ year = {2019},
  title = {Reality CVT Automatic Transmission for Tamiya 1/14 Tractor Truck - Rigidrc Shop},
- url = {http://www.rigidrc.com/shop/transmission/670-reality-cvt-automatic-transmission-for-tamiya-114-tractor-truck.html},
+ note = {URL: \url{http://www.rigidrc.com/shop/transmission/670-reality-cvt-automatic-transmission-for-tamiya-114-tractor-truck.html}[abgerufen am 04.03.2019].},
  urldate = {04.03.2019}
 }
 
 
 @article{Drela.2007,
- author = {{Mark Drela}},
+ author = {Drela, Mark},
  year = {2007},
  title = {First-Order DC Electric Motor Model}
 }
 
 
 @misc{Drivecalc,
- year = {07.05.2018},
+ author = {Persson, Christian},
+ year = {2019},
  title = {Drive Calculator},
- url = {http://www.drivecalc.de/},
+ note = {URL: \url{http://www.drivecalc.de/}[abgerufen am 27.12.2018].},
  keywords = {BL;brushless;DC motor;e-flight;elektroantrieb;elektroflug;eletric flight;modellflug;motor analysis;motor analyzer;motoranalyse;performance prediction;propeller calculator;reconfigurator;rotor calculator;wire calculator},
  urldate = {27.12.2018}
 }
@@ -187,26 +203,30 @@
 
 @misc{dwd,
  abstract = {Das Wetterlexikon des DWD erl{\"a}utert die wichtigsten meteorologischen Begriffe und wird st{\"a}ndig ausgebaut.},
+ author = {{Deutscher Wetterdienst}},
+ year = {2019},
  title = {Wetter und Klima - Deutscher Wetterdienst - Glossar - R - Radiosonde},
- url = {https://www.dwd.de/DE/service/lexikon/Functions/glossar.html?lv2=102134&lv3=102176},
+ note = {URL: \url{https://www.dwd.de/DE/service/lexikon/Functions/glossar.html?lv2=102134&lv3=102176}[abgerufen am 22.02.2019].},
  urldate = {22.02.2019}
 }
 
 
 @misc{eCalc,
  abstract = {get your electric rc drive right ✓ fast {\&} reliable simulation - no more guessing ✓ most comprehensive motor database ☆ prevents mispurchase since 2004},
- year = {23.12.2018},
+ author = {M{\"u}ller, Markus},
+ year = {2018},
  title = {eCalc - the most reliable electric Motor Calculator on the Web for RC Pilots},
- url = {https://www.ecalc.ch/},
+ note = {URL: \url{https://www.ecalc.ch/}[abgerufen am 27.12.2018].},
  keywords = {Accu;Airplane;Akku;Antrieb;Auto;Batterie;Battery;BEV;Calc;Calculator;Car;Consumption;Drive;Ducted Fan;eAuto;e-calc;eCalc;eCar;EDF;eflight;electric;Electric Vehicle;eMobilit{\"a}t;eMobility;Energie;Energy;ESC;EV;Fahrzeug;fanCalc;Flugzeug;heliCalc;Helicopter;Helikopter;Impeller;Jet;Luftschraube;Modellbau;MotoCalc;Motor;Multicopter;Multikopter;Multirotor Elektro;Plane;propCalc;Propeller;Range;RC;Rechner;Regler;Reichweite;Remote Control;Setup;Simulate;Simulation;Verbrauch;xCalc;xcopterCalc},
  urldate = {27.12.2018}
 }
 
 
 @misc{elektromodellflug,
- year = {05.06.2012},
+ author = {Giese, Gerd},
+ year = {2012},
  title = {Elektromodellflug - Datenbank},
- url = {https://www.elektromodellflug.de/oldpage/datenbank.htm},
+ note = {URL: \url{https://www.elektromodellflug.de/oldpage/datenbank.htm}[abgerufen am 20.02.2019].},
  urldate = {20.02.2019}
 }
 
@@ -228,9 +248,10 @@
 
 @misc{Flyeval,
  abstract = {A performance evaluation website for multicopters or multirotors . Users can obtain the detail evaluations after providing the body frame parameters, the environment and propulsion system parameters.},
- year = {07.12.2018},
+ author = {{Reliable Flight Control Group}},
+ year = {2018},
  title = {flyeval - Flight Performance Evaluation of UAVs|estimate performance of UAV|multicopter|multirotor|quadcopter|quadrotor performance evaluation|endurance calculation},
- url = {https://flyeval.com/},
+ note = {URL: \url{https://flyeval.com/}[abgerufen am 27.12.2018].},
  keywords = {Battery;Calc;calculation;copter;electric;ESC;evaluation;flyeval;flying;Model;Motor;Multicopter;multirotor;performance;Propeller;quadcopter;quadrotor;rotor;test;UAV},
  urldate = {27.12.2018}
 }
@@ -238,8 +259,10 @@
 
 @misc{gemfan,
  abstract = {Buy GemFan-Acc-7038-ABS-BK / GemFan 7038 ABS Propeller (M6 / Black / CW and CCW) online at the lowest price. HeliPal is famous for their Fast Shipping, Low Price and Good Service. HeliPal is the best and the biggest rc helicopter online store. We have full range of Walkera rc helicopters, walkera parts and accessories, align rc helicopter, part and accessory, nine eagles helicopter, nineeagles parts and accessories, HSP rc cars and HSP parts.},
+ author = {Helipal.com},
+ year = {2019},
  title = {GemFan 7038 ABS Propeller (M6 / Black / CW and CCW)},
- url = {http://www.helipal.com/gemfan-7038-abs-propeller-m6-black-cw-and-ccw.html},
+ note = {URL: \url{http://www.helipal.com/gemfan-7038-abs-propeller-m6-black-cw-and-ccw.html}[abgerufen am 26.02.2019].},
  keywords = {Align Parts;Align TRex Helicopter;esky parts;GemFan 7038 ABS Propeller (M6 / Black / CW and CCW);Gemfan Plastic Propellers;Gemfan Propellers;GemFan-Acc-7038-ABS-BK;nine eagles;nine eagles parts;rc helicopter;Walkera;Walkera helicopter;Walkera parts},
  urldate = {26.02.2019}
 }
@@ -272,8 +295,10 @@
 
 @misc{landwirtschaft,
  abstract = {Schadenserfassung aus der Vogelperspektive. Drohnen leisten in der heutigen smarten Landwirtschaft wertvolle Dienste. Sie helfen, Tiere vor dem M{\"a}hen im Feld zu orten, gr{\"o}{\ss}ere Unkrautnester von oben zu entdecken oder Sch{\"a}dlinge biologisch zu bek{\"a}mpfen.},
+ author = {{Forum Moderne Landwirtschaft}},
+ year = {2019},
  title = {Drohnen f{\"u}r die Landwirtschaft: Innovativer Pflanzenschutz},
- url = {https://www.moderne-landwirtschaft.de/drohnen-fuer-die-landwirtschaft-innovativer-pflanzenschutz},
+ note = {URL: \url{https://www.moderne-landwirtschaft.de/drohnen-fuer-die-landwirtschaft-innovativer-pflanzenschutz}[abgerufen am 19.02.2019].},
  keywords = {Drohne;Ernteversicherung;Landwirtschaft},
  urldate = {19.02.2019}
 }
@@ -324,7 +349,7 @@
 
 
 @phdthesis{Ostler.2006,
- author = {{Jon N. Ostler}},
+ author = {Ostler, Jon Neal},
  year = {17.03.2006},
  title = {Flight Testing Small, Electric Powered Unmanned Aerial Vehicles},
  url = {http://hdl.lib.byu.edu/1877/etd1223},
@@ -348,9 +373,10 @@
 
 
 @misc{polizei,
- year = {23.08.2018},
+ author = {{Nieders{\"a}chsisches Ministerium f{\"u}r Inneres und Sport}},
+ year = {2018},
  title = {Beantwortung der M{\"u}ndl. Anfrage der FDP zum Drohneneinsatz der Polizei | Nds. Ministerium f{\"u}r Inneres und Sport},
- url = {http://www.mi.niedersachsen.de/startseite/aktuelles/aus_landtag/beantwortung-der-muendl-anfrage-der-fdp-zum-drohneneinsatz-der-polizei-168086.html},
+ note = {URL: \url{http://www.mi.niedersachsen.de/startseite/aktuelles/aus_landtag/beantwortung-der-muendl-anfrage-der-fdp-zum-drohneneinsatz-der-polizei-168086.html}[abgerufen am 19.02.2019].},
  keywords = {Drohnen;Landtag;Pistorius;Polizei},
  urldate = {19.02.2019}
 }
