--- a/Sicherheitskopie/abstract.tex
+++ b/Sicherheitskopie/abstract.tex
@@ -2,5 +2,6 @@
 In dieser Arbeit wird eine Leistungsuntersuchung an elektrisch, propellergetriebenen Fluggeräten durchgeführt, welche sowohl Multicopter als auch Flächenflugzeuge umfasst. Ziel ist es, eine Höhe von \SI{10}{km} bis \SI{15}{km} zu erreichen und der angedachte Hintergrund ist der Austausch von Wetterballonen für die Atmosphärenmessung durch solche Fluggeräte. Wetterballone besitzen viele Nachteile, die elektrische, propellergetriebene Fluggerät nicht haben. Im März des Jahres 2018 zeigte ein Quadrocopterflug, dass es möglich ist eine Höhe von mehr als \SI{10000}{m} zu erreichen. 
 Nach einer kurzen Darstellung zum Standpunkt der Technik folgt die Beschreibung der Flugleistungsberechnung innerhalb des dafür vorgesehenen Programms. Dies umfasst auch die Grenzen und Einschränkungen der verwendeten Modelle. Eine Überprüfung und Validierung des Programms erfolgt mit dem Abgleich eines realen Steigfluges auf \SI{12600}{m} mit einem Quadrocopter und den im Programm errechneten Flugleistungen. Dabei reproduziert das Programm die Flugleistungen akkurat, allerdings mit gewissen Abweichungen bzgl. der Motorregler. \\
 Die eigentliche Parameteruntersuchung beginnt mit dem Vergleich der Flugleistungen von einem Multicopter mit einem äquivalenten Flächenflugzeug. Der Multicopter weist im Gegensatz zu einem Flächenflugzeug entscheidende Vorteile für diese Mission auf und Potential für eine zusätzliche Optimierung. Aus diesem Grund wird er im weiteren Verlauf genauer betrachtet. Die Optimierung bezieht sich vor allem den Motor, die Propeller, die Batterie und den Anteil der Batteriemasse am Gesamtgewicht. Schließlich wird noch der Leistungsgewinn durch den Einsatz von einem Verstellpropeller und einem Getriebe untersucht. 
-
+Die Optimierung schließt mit der Vorstellung einer optimalen Lösung ab. Das Leistungsverhalten wird dabei zum einen unter idealen und zum anderen unter den Randbedingungen des AEROMET\_UAV-Projektes demonstriert. 
+\todo[inline]{abschließender Satz zu den erzielten}
 
