--- a/Sicherheitskopie/conclusion.tex
+++ b/Sicherheitskopie/conclusion.tex
@@ -1,8 +1,8 @@
 \chapter{Zusammenfassung und Ausblick}
 
 \section{Zusammenfassung}
-In dieser Arbeit wurde ein Programm zur flugmechanischen Untersuchung von elektrischen, propellergetriebenen Fluggeräten zum effizienten Aufstieg in die untere Stratosphäre vorgestellt und genauer erläutert (vgl. Abschn. \ref{sec:aufbau_des_programms}). Im Anschluss an die Darlegung der technischen Grenzen und der Genauigkeit der Modelle(vgl. Abschn. \ref{sec:vernachlaessigungen_vereinfachungen}) erfolgte die Validierung des Programms anhand eines realen Steigfluges eines Quadrocopters auf über \SI{10}{km} Höhe (vgl. Kap. \ref{chap:nachbildung_des_quadrocopter}). Es zeigte sich, dass die Flugleistungen des Quadrocopters mit den Berechnungen des Programms gut übereinstimmen (vgl. Abschn. \ref{sec:ergebnisse_quadrocopter}). \\
-Die erste Optimierung des Fluggerätes stellte die grundsätzliche Frage dar, welche Art von Fluggerät, Flächenflugzeug oder Multicopter, besser den Ansprüchen eines effizienten Aufstiegs und Randbedingungen des Projektes AEROMET\_UAV gerecht wird (vgl. Kap. \ref{chap:vergleich}). Hierzu wurde das Flächenflugzeug im möglichen Rahmen des Modells optimiert und die Ergebnisse anschließend mit den Flugleistungen des Quadrocopters aus Kap. \ref{chap:nachbildung_des_quadrocopters} verglichen. Der Multicopter erwies sich für die Anwendung innerhalb des AEROMET\_UAV Projektes als besser geeignet (vgl. Abschn. \ref{sec:ergebnisse_vergleich}). Infolge dessen wurden im Anschluss Parameter des Multicopters optimiert. \\
+In dieser Arbeit wurde ein Programm zur flugmechanischen Untersuchung von elektrischen, propellergetriebenen Fluggeräten zum effizienten Aufstieg in die untere Stratosphäre vorgestellt und genauer erläutert (vgl. Abschn. \ref{sec:aufbau_des_programms}). Im Anschluss an die Darlegung der technischen Grenzen und der Genauigkeit der Modelle (vgl. Abschn. \ref{sec:vernachlaessigungen_vereinfachungen}) erfolgte die Validierung des Programms anhand eines realen Steigfluges eines Quadrocopters auf über \SI{10}{km} Höhe (vgl. Kap. \ref{chap:nachbildung_des_quadrocopter}). Es zeigte sich, dass die Flugleistungen des Quadrocopters mit den Berechnungen des Programms gut übereinstimmen (vgl. Abschn. \ref{sec:ergebnisse_quadrocopter}). \\
+Die erste Optimierung des Fluggerätes stellte die grundsätzliche Frage dar, welche Art von Fluggerät, Flächenflugzeug oder Multicopter, besser den Ansprüchen eines effizienten Aufstiegs und den Randbedingungen des Projektes AEROMET\_UAV gerecht wird (vgl. Kap. \ref{chap:vergleich}). Hierzu wurde eine Flächenflugzeug-Referenzkonfiguration im möglichen Rahmen des Modells optimiert und die Ergebnisse anschließend mit den Flugleistungen des Quadrocopters aus Kap. \ref{chap:nachbildung_des_quadrocopter} verglichen. Der Multicopter erwies sich für die Anwendung innerhalb des AEROMET\_UAV Projektes als besser geeignet (vgl. Abschn. \ref{sec:ergebnisse_vergleich}). Infolge dessen wurden im Anschluss Parameter des Multicopters optimiert. \\
 Für die Optimierung wurde zuerst eine Multicopter-Referenzkonfiguration definiert (vgl. Abschn. \ref{sec:multicopter_referenzkonfig}), an der die Einflüsse verschiedener Parameter deutlich gemacht wurden. Die Optimierung befasste sich mit dem Einfluss von Parametern wie dem Widerstandsbeiwert (vgl. Abschn. \ref{subsec:widerstandseinfluss}), der Batteriespannung (vgl. Abschn. \ref{subsec:einfluss_n_bat}), dem Motorreglerwirkungsgrad (vgl. Abschn. \ref{subsec:einfluss_eta_pwm}) oder dem Einfluss des maximalen Motorstroms (vgl. Abschn. \ref{subsec:einfluss_imax}).\\
 Eine wichtige Optimierung betraf die Konfiguration des Multicopters an sich. Hierzu wurde zum einen die optimale Batteriemasse in Abhängigkeit der Gesamtmasse (vgl. Abschn. \ref{subsec:massenverteilung}) untersucht sowie zum anderen die Größe des Multicopters (vgl. Abschn. \ref{subsec:groesse}) und die Anzahl der Propeller (vgl. Abschn. \ref{subsec:anz_prop}). 
 Weiterhin wurde der Einsatz eines Verstellpropellers (vgl. Abschn. \ref{subsec:verstellprop}) und eines Getriebes (vgl. Abschn. \ref{subsec:getriebe}) abgewogen. Beide können nur unter idealen Voraussetzungen einen Leistungsgewinn erzielen.
