--- a/Sicherheitskopie/main.tex
+++ b/Sicherheitskopie/main.tex
@@ -19,6 +19,7 @@
     \newcommand{\typeOfThesis}{Bachelorarbeit}
     \newcommand{\examiner}{Prof. Dr.-Ing. Peter Hecker}
     \newcommand{\supervisor}{Yannic Beyer, M. Sc.}
+   	\newcommand{\secondsupervisor}{Alexander Peuker, M. Sc.}
     \author{Lucas Schreer}
     \title{%
        Flugmechanische Untersuchung zum effizienten Aufstieg in die untere Stratosphäre mit elektrischen, propellergetriebenen Fluggeräten
@@ -51,8 +52,8 @@
     %
     %%%%%%%%%%%%%%%%%%%%%%%%%%% 
 	% Remove after finished !!!!!!!!!!!!!!!!!!!!!!!!!
-	\todototoc  
-    \listoftodos
+%	\todototoc  
+%    \listoftodos
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%
     % Einbinden des Eids.
     \include{oath}
@@ -91,7 +92,7 @@
     \include{parameteroptimierung}
     %\include{parameteruntersuchung}
     \include{conclusion}
-    \include{projektmanagement}
+    %\include{projektmanagement}
 % ******************************************************************************
     %
     % Einfuegen des Literaturverzeichnisses.
@@ -110,8 +111,8 @@
 %    \setcounter{totalPages}{\value{page}}
 %    \pagenumbering{Roman}
 %    \setcounter{page}{\value{roemisch}}
-	%\input{appendix2}
     \input{appendix}
+    \input{appendix2}
 %    \newpage
 %    \pagenumbering{arabic}
 %    \setcounter{page}{\value{page}-1}
