--- a/Sicherheitskopie/vergleich.tex
+++ b/Sicherheitskopie/vergleich.tex
@@ -11,16 +11,16 @@ in Bezug auf bereits gewählte Massen und auf den Quadrocopter zusammen. Der Fak
 \end{equation} 
 Für eine erste Betrachtung wird der Penalty-Faktor auf 1 gesetzt. Dies entspricht einer optimistischen Einschätzung. Im Anschluss werden die Parameter in näherer Umgebung der ersten festgesetzten Werte variiert. Dadurch kann der Einfluss auf das Leistungsverhalten und die Richtung der möglichen Optimierung bestimmt werden. Diese erste, einfache Untersuchung ist nur eine sehr oberflächliche, weil jeder Parameter nur einzeln und unabhängig von den anderen untersucht wird. Jegliche Kombinationen von Einflüssen wie der Einfluss der Masse auf die Steiggeschwindigkeit oder vergleichbare Beziehungen werden vernachlässigt. Im Hinblick auf diese erste, kleine Optimierung ist der Kostenfaktor die maximal erreichbare Höhe beider Fluggeräte. Je nachdem welches der beiden Fluggeräte effektiver und effizienter eine maximale Flughöhe erreicht, wird es weiter untersucht und anschließend optimiert.  
 
-\section{Einfluss der Steiggeschwindigkeit auf den Quadrocopterflug}
-Bevor ein Vergleich zwischen dem Flächenflugzeug und dem Quadrocopter aus Kap. \ref{chap:chap:nachbildung_des_quadrocopter} durchgeführt werden kann, muss noch die Steiggeschwindigkeit für den Quadrocopter optimiert werden. \\
-Für das Flächenflugzeug werden für jeden Höhenschritt, wie bereits in Abschn. \ref{subsubsec:schub_flaechenflzg} dargelegt, der Bahnneigungswinkel und die Fluggeschwindigkeit optimiert. Dies entspricht einer ersten Optimierung. Dabei wird der Bahnneigungswinkel für jeden Höhenschritt iteriert. Die Fluggeschwindigkeit berechnet sich in Abhängigkeit vom Bahnneigungswinkel (vgl. Gleichung \eqref{eq:eq:geschw_flaechenflugzeug}). Die Auswahl erfolgt anhand der minimalen Energiemenge, die der Batterie für den Höhenschritt entnommen wird. Analog dazu, erfolgt auch die Optimierung der Steiggeschwindigkeit des Quadrocopters (vgl. Anhang \ref{sec:vvar_vorgehen}). \\
-Durch die Optimierung der Steiggeschwindigkeit ist ein zusätzlicher Höhengewinn von \SI{1000}{m} im Vergleich zu dem Flug mit konstanter Bahngeschwindigkeit von \SI{10}{m/s} zu vermerken. Bei dem neuen TOC auf \SI{14100}{m} wird allerdings die sogenannte Dienstgipfelhöhe erreicht (genauere Beschreibung in Abschn. \ref{sec:flaechenflugzeug_referenzkonfig} und \ref{subsec:mot_prop_kombi}). Ohne diese Limitierung und bei linearer Extrapolation Restladungskurve könnte der Quadrocopter bei Verwendung eines anderen Propellers eine Höhe von \SI{17000}{m} erreichen. Die Flugleistungen sind nicht durch die Motorleistung begrenzt, sondern durch die Maximaldrehzahl des Propellers. Diese liegt bei \SI{17000}{RPM}. Ein Grund dafür kann in der Festigkeit des Propellers gefunden werden. Nichtsdestotrotz ist ein Flug mit variierbarer Steiggeschwindigkeit signifikant effizienter. Dies macht sich deutlich in der Restladung bemerkbar. Die Abnahme der Restladung ist pro Höhenschritt geringer als in Kap. \ref{sec:ergebnisse_quadrocopter}. Auf \SI{10260}{m} sind noch \SI{40}{\%} Restladung vorhanden. Das entspricht ca. \SI{10}{\%} mehr Restladung in der gleichen Höhe wie in Kap. \ref{chap:nachbildung_des_quadrocopter}. Die Propellerdrehzahl steigt beinahe sofort auf ihr Maximum von \SI{17000}{RPM} an und verbleibt auf diesem Niveau bis zum TOC. Rückwirkend ist damit auch der Motorstrom ab \SI{4000}{m} auf dem Niveau der Batteriespannung und somit die PWM auf \SI{100}{\%}. Der Leistungsüberschuss ist gleich null. Dieser Zustand ist auch durch ein Maximum der Bahngeschwindigkeit gekennzeichnet mit \SI{30}{m/s}. Die Bahngeschwindigkeit ist damit dreimal so hoch wie die vorherigen \SI{10}{m/s}. Der Motorstrom \ensuremath{I_{Mot}} sinkt im Laufe des Fluges immer weiter ab. Da die Drehzahl konstant bleibt, die Dichte aber mit der Höhe abnimmt, sinkt auch das Drehmoment an der Motorwelle und letztlich der Motorstrom (vgl. Gleichung \eqref{eq:motorstrom}). Über den Motorstrom sinkt die Motorspannung ebenfalls leicht ab (vgl. Gleichung \eqref{eq:motorspannung}), weil die Drehzahl auf einem konstanten Niveau bleibt. Während die Batteriespannung von \SI{16}{V} auf \SI{15}{V} durch die Last einbricht, fällt mit der Motorspannung auch die PWM unterhalb von \SI{100}{\%} ab. Die Bahngeschwindigkeit steigt zuerst auf ihr Maximum, sinkt danach aber kontinuierlich auf \SI{0}{m/s}. Somit wird die Dienstgipfelhöhe erreicht. Die Flugzeit kann auf die Bahngeschwindigkeit zurückgeführt werden. Bereits nach \SI{13}{min} und \SI{20}{sec} wird der TOC erreicht. \\
+\section{Einfluss der Bahngeschwindigkeit auf den Quadrocopterflug}
+Bevor ein Vergleich zwischen dem Flächenflugzeug und dem Quadrocopter aus Kap. \ref{chap:chap:nachbildung_des_quadrocopter} durchgeführt werden kann, muss noch die Bahngeschwindigkeit für den Quadrocopter optimiert werden. \\
+Für das Flächenflugzeug werden für jeden Höhenschritt, wie bereits in Abschn. \ref{subsubsec:schub_flaechenflzg} dargelegt, der Bahnneigungswinkel und die Fluggeschwindigkeit optimiert. Dies entspricht einer ersten Optimierung. Dabei wird der Bahnneigungswinkel für jeden Höhenschritt iteriert. Die Fluggeschwindigkeit berechnet sich in Abhängigkeit vom Bahnneigungswinkel (vgl. Gleichung \eqref{eq:eq:geschw_flaechenflugzeug}). Die Auswahl erfolgt anhand der minimalen Energiemenge, die der Batterie für den Höhenschritt entnommen wird. Analog dazu, erfolgt auch die Optimierung der Bahngeschwindigkeit des Quadrocopters (vgl. Anhang \ref{sec:vvar_vorgehen}). \\
+Durch die Optimierung der Bahngeschwindigkeit ist ein zusätzlicher Höhengewinn von \SI{1000}{m} im Vergleich zu dem Flug mit konstanter Bahngeschwindigkeit von \SI{10}{m/s} zu vermerken. Bei dem neuen TOC auf \SI{14100}{m} wird allerdings die sogenannte Dienstgipfelhöhe erreicht (genauere Beschreibung in Abschn. \ref{sec:flaechenflugzeug_referenzkonfig} und \ref{subsec:mot_prop_kombi}). Ohne diese Limitierung und bei linearer Extrapolation Restladungskurve könnte der Quadrocopter bei Verwendung eines anderen Propellers eine Höhe von \SI{17000}{m} erreichen. Die Flugleistungen sind nicht durch die Motorleistung begrenzt, sondern durch die Maximaldrehzahl des Propellers. Diese liegt bei \SI{17000}{RPM}. Ein Grund dafür kann in der Festigkeit des Propellers gefunden werden. Nichtsdestotrotz ist ein Flug mit variierbarer Bahngeschwindigkeit signifikant effizienter. Dies macht sich deutlich in der Restladung bemerkbar. Die Abnahme der Restladung ist pro Höhenschritt geringer als in Kap. \ref{sec:ergebnisse_quadrocopter}. Auf \SI{10260}{m} sind noch \SI{40}{\%} Restladung vorhanden. Das entspricht ca. \SI{10}{\%} mehr Restladung in der gleichen Höhe wie in Kap. \ref{chap:nachbildung_des_quadrocopter}. Die Propellerdrehzahl steigt beinahe sofort auf ihr Maximum von \SI{17000}{RPM} an und verbleibt auf diesem Niveau bis zum TOC. Rückwirkend ist damit auch der Motorstrom ab \SI{4000}{m} auf dem Niveau der Batteriespannung und somit die PWM auf \SI{100}{\%}. Der Leistungsüberschuss ist gleich null. Dieser Zustand ist auch durch ein Maximum der Bahngeschwindigkeit gekennzeichnet mit \SI{30}{m/s}. Die Bahngeschwindigkeit ist damit dreimal so hoch wie die vorherigen \SI{10}{m/s}. Der Motorstrom \ensuremath{I_{Mot}} sinkt im Laufe des Fluges immer weiter ab. Da die Drehzahl konstant bleibt, die Dichte aber mit der Höhe abnimmt, sinkt auch das Drehmoment an der Motorwelle und letztlich der Motorstrom (vgl. Gleichung \eqref{eq:motorstrom}). Über den Motorstrom sinkt die Motorspannung ebenfalls leicht ab (vgl. Gleichung \eqref{eq:motorspannung}), weil die Drehzahl auf einem konstanten Niveau bleibt. Während die Batteriespannung von \SI{16}{V} auf \SI{15}{V} durch die Last einbricht, fällt mit der Motorspannung auch die PWM unterhalb von \SI{100}{\%} ab. Die Bahngeschwindigkeit steigt zuerst auf ihr Maximum, sinkt danach aber kontinuierlich auf \SI{0}{m/s}. Somit wird die Dienstgipfelhöhe erreicht. Die Flugzeit kann auf die Bahngeschwindigkeit zurückgeführt werden. Bereits nach \SI{13}{min} und \SI{20}{sec} wird der TOC erreicht. \\
 Der Motorregler verzeichnet wenige Verluste durch die hohe PWM und besitzt deshalb einen hohen Wirkungsgrad. Der Propellerwirkungsgrad steigt am Anfang durch den Drehzahlanstieg (vgl. Gleichung \eqref{eq:eta_prop}) und ebenso mit dem Schub und der Bahngeschwindigkeit. Während der Schubüberschuss aufgebraucht ist, sinkt mit der Höhe die Dichte und dementsprechend der Schub. Mit dem Schub sinkt auch die leistungstechnisch mögliche Bahngeschwindigkeit, was einen starken Einbruch im Propellerwirkungsgrad hervorruft.
 
 \begin{figure}[htb!]
 \centering
 	\includegraphics[scale=0.7]{Diagramme/Russland_vvar.pdf}
-	\caption{Flugleistungen des Quadrocopter aus \cite{Anderson.2018} mit variabler Steiggeschwindigkeit}
+	\caption{Flugleistungen des Quadrocopter aus \cite{Anderson.2018} mit variabler Bahngeschwindigkeit}
 	\label{abb:russland_vvar}
 \end{figure}
 
@@ -149,7 +149,7 @@ Dementsprechend ist eine Erhöhung des Penalty-Faktors zwingend erforderlich. Un
 \label{subsec:vstern}
 Die Auslegungsgeschwindigkeit ruft ähnlich zu der Motor-Propeller-Kombination (vgl. Abb. \ref{abb:flaechenflzg_mot_prop}) oder der Propelleranzahl (vgl. Abb. \ref{abb:flaechenflzg_n_prop}) Einflüsse auf das Leistungsverhalten des Flächenflugzeugs hervor. Da für den Steigflug ein Flug mit konstantem Auftriebsbeiwert vorausgesetzt wird, erhöht sich aufgrund dessen die Fluggeschwindigkeit mit der Höhe und größerem Bahnneigungswinkel (vgl. Gleichung \eqref{eq:geschw_flaechenflugzeug}).
 Ist die Auslegungsgeschwindigkeit gering, so wächst sie absolut gesehen mit der Höhe nicht so stark wie bei hohen Auslegungsgeschwindigkeiten (vgl. Verlauf der Fluggeschwindigkeit über der Höhe in Abb. \ref{abb:vstern}). 
-Bis zu einem \ensuremath{V^\star} von \SI{75}{km/h} ist die Batterierestladung der limitierende Faktor für die Flughöhe. Ab einer Auslegungsgeschwindigkeit von \SI{100}{km/h}, die auch diejenige der Referenzkonfiguration ist, wird wieder die Dienstgipfelhöhe durch \ensuremath{Ma_{tip} = 1} an der Propellerblattspitze erreicht. Bis zu einer Höhe von \SI{13000}{m} sind auch die Verläufe der Restladung von \ensuremath{V^\star} mit \SI{100}{km/h} und \SI{125}{km/h} identisch. Für alle Auslegungsgeschwindigkeiten ist das Flugverhalten gleich dem aus Abschn. \ref{sec:multicopter_vs_flaechenflugzeug}. Es wird wieder solange mit maximalen Motorstrom geflogen, bis entweder die Restkapazität \SI{0}{\%} oder die Dienstgipfelhöhe durch einen anderen limitierenden Leistungsparameter, in diesem Fall wieder die Propellerdrehzahl, erreicht ist. Durch die höhere Auslegungsgeschwindigkeit und demzufolge auch die höhere Fluggeschwindigkeit (vgl. Gleichung \eqref{eq:geschw_flaechenflugzeug}) kommt es zu einer höheren Propelleranströmgeschwindigkeit. Um trotzdem den gleichen Schub zu erzeugen ist eine höhere Drehzahl notwendig. Mit dem schneller drehenden Propeller steigt auch die Motorspannung (vgl. Gleichung \eqref{eq:motorspannung}), der Batteriestrom und über die Motorspannung auch die PWM. Die gesteigerte Propelleranströmgeschwindigkeit verbessert den Propellerwirkungsgrad und als Konsequenz daraus den Gesamtwirkungsgrad. Daher ist der Gesamtwirkungsgrad für größere Auslegungsgeschwindigkeiten besser. Dies kann auch auf den verbesserten Motorreglerwirkungsgrad bei einer höheren PWM zurückgeführt werden (vgl. Gleichung \eqref{eq:eta_pwm}). Es kann schließlich noch festgehalten werden, dass mit steigender Auslegungsgeschwindigkeit der Bahnneigungswinkel \ensuremath{\gamma} abnimmt, da die Zeit zum Überwinden eines Höhenschritts bei einer höheren Geschwindigkeit und geringerem Bahnneigungswinkel sich kaum ändert. \\
+Bis zu einem \ensuremath{V^\star} von \SI{75}{km/h} ist die Batterierestladung der limitierende Faktor für die Flughöhe. Ab einer Auslegungsgeschwindigkeit von \SI{100}{km/h}, die auch diejenige der Referenzkonfiguration ist, wird wieder die Dienstgipfelhöhe durch \ensuremath{Ma_{tip} = 1} an der Propellerblattspitze erreicht. Bis zu einer Höhe von \SI{13000}{m} sind auch die Verläufe der Restladung von \ensuremath{V^\star} mit \SI{100}{km/h} und \SI{125}{km/h} identisch. Für alle Auslegungsgeschwindigkeiten ist das Flugverhalten gleich dem aus Abschn. \ref{sec:flaechenflugzeug_referenzkonfig}. Es wird wieder solange mit maximalen Motorstrom geflogen, bis entweder die Restkapazität \SI{0}{\%} oder die Dienstgipfelhöhe durch einen anderen limitierenden Leistungsparameter, in diesem Fall wieder die Propellerdrehzahl, erreicht ist. Durch die höhere Auslegungsgeschwindigkeit und demzufolge auch die höhere Fluggeschwindigkeit (vgl. Gleichung \eqref{eq:geschw_flaechenflugzeug}) kommt es zu einer höheren Propelleranströmgeschwindigkeit. Um trotzdem den gleichen Schub zu erzeugen ist eine höhere Drehzahl notwendig. Mit dem schneller drehenden Propeller steigt auch die Motorspannung (vgl. Gleichung \eqref{eq:motorspannung}), der Batteriestrom und über die Motorspannung auch die PWM. Die gesteigerte Propelleranströmgeschwindigkeit verbessert den Propellerwirkungsgrad und als Konsequenz daraus den Gesamtwirkungsgrad. Daher ist der Gesamtwirkungsgrad für größere Auslegungsgeschwindigkeiten besser. Dies kann auch auf den verbesserten Motorreglerwirkungsgrad bei einer höheren PWM zurückgeführt werden (vgl. Gleichung \eqref{eq:eta_pwm}). Es kann schließlich noch festgehalten werden, dass mit steigender Auslegungsgeschwindigkeit der Bahnneigungswinkel \ensuremath{\gamma} abnimmt, da die Zeit zum Überwinden eines Höhenschritts bei einer höheren Geschwindigkeit und geringerem Bahnneigungswinkel sich kaum ändert. \\
 Aufgrund dieser Tatsachen ist das Flächenflugzeug auf einigermaßen hohe Fluggeschwindigkeiten von rund \SI{100}{km/h} auszulegen, um zum einen den Leistungsüberschuss der Motoren ausreichend hoch zu halten und zum anderen die Zeit zum Aufstieg nicht zu vergrößern. Weiterhin wird die Auslegungsgeschwindigkeit durch die Wahl des Propellers beeinflusst. Bei gleichem Durchmesser steigt die optimale Auslegungsgeschwindigkeit mit der Propellersteigung.
 
 
